--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Photonics – Energy, Information, Material</p>
     </header>
     <main>
-        <img src="profile.jpg" alt="Cheng Guo">
+        <img src="profile.jpg" alt="Cheng Guo" class="profile-pic">
         <nav>
             <a href="#publications">Full List of Publications</a>
             <a href="#news">News and Latest Events</a>
@@ -25,3 +25,4 @@
     </footer>
 </body>
 </html>
+
