--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheng Guo's Blog</title>
+    <title>Xingtai Liang's Blog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Cheng Guo</h1>
+        <h1>Xingtai Liang</h1>
         <p>Physicist</p>
-        <p>Ph.D., Applied Physics, Stanford University</p>
-        <p>Photonics – Energy, Information, Material</p>
+        <p>PostDoc., Applied Physics, Wuhan University</p>
+        <p>Condensed Matter Physcis</p>
     </header>
     <main>
-        <img src="profile.jpg" alt="Cheng Guo" class="profile-pic">
+        <img src="profile.jpg" alt="Xingtai Liang" class="profile-pic">
         <nav>
             <a href="#publications">Full List of Publications</a>
             <a href="#news">News and Latest Events</a>
         </nav>
     </main>
     <footer>
-        <p>Contact: guocheng@stanford.edu</p>
+        <p>Contact: xtliang@whu.edu.cn</p>
     </footer>
 </body>
 </html>
