--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Xingtai Liang</h1>
         <p>Physicist</p>
-        <p>PostDoc., Applied Physics, Wuhan University</p>
+        <p>PostDoc., Schools of Physics and Technology, Wuhan University</p>
         <p>Condensed Matter Physcis</p>
     </header>
     <main>
