--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Condensed Matter Physcis</p>
     </header>
     <main>
-        <img src="profile.jpg" alt="Xingtai Liang" class="profile-pic">
+        <img src="profile2.jpg" alt="Xingtai Liang" class="profile-pic">
         <nav>
             <a href="#publications">Full List of Publications</a>
             <a href="#news">News and Latest Events</a>
