--- a/index.html
+++ b/index.html
@@ -3,26 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xingtai Liang's Blog</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>My Personal Webpage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        header {
+            text-align: center;
+            padding: 20px 0;
+        }
+        header h1 {
+            margin: 0;
+        }
+        nav {
+            text-align: center;
+            margin: 20px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #333;
+        }
+        section {
+            margin: 20px 0;
+        }
+        .social-media {
+            text-align: center;
+            margin: 20px 0;
+        }
+        .social-media a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: #333;
+        }
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #333;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Xingtai Liang</h1>
-        <p>Physicist</p>
-        <p>PostDoc., Schools of Physics and Technology, Wuhan University</p>
-        <p>Condensed Matter Physcis</p>
-    </header>
-    <main>
-        <img src="profile2.jpg" alt="Xingtai Liang" class="profile-pic">
+    <div class="container">
+        <header>
+            <h1>My Personal Webpage</h1>
+        </header>
         <nav>
-            <a href="#publications">Full List of Publications</a>
-            <a href="#news">News and Latest Events</a>
+            <a href="#about">About</a>
+            <a href="#education">Education</a>
+            <a href="#publications">Publications</a>
+            <a href="#contact">Contact</a>
+            <a href="#blog">Blog</a>
         </nav>
-    </main>
-    <footer>
-        <p>Contact: xtliang@whu.edu.cn</p>
-    </footer>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>I am a physicist with a strong background in condensed matter and optics. My work focuses on [specific research areas or projects].</p>
+        </section>
+        <section id="education">
+            <h2>Education</h2>
+            <ul>
+                <li>Ph.D. in Physics, [University Name]</li>
+                <li>M.Sc. in Physics, [University Name]</li>
+                <li>B.Sc. in Physics, [University Name]</li>
+            </ul>
+        </section>
+        <section id="publications">
+            <h2>Publications</h2>
+            <ul>
+                <li>[Publication 1]</li>
+                <li>[Publication 2]</li>
+                <li>[Publication 3]</li>
+                <!-- Add more publications as needed -->
+            </ul>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: [your.email@example.com]</p>
+            <p>Phone: [Your Phone Number]</p>
+        </section>
+        <section id="blog">
+            <h2>Blog</h2>
+            <p>Welcome to my blog! Here, I share my thoughts on recent developments in physics, interesting research findings, and more. Stay tuned for updates!</p>
+        </section>
+        <div class="social-media">
+            <a href="https://x.com/rhunjae44" target="_blank">Twitter</a>
+            <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>
+            <a href="https://github.com/yourprofile" target="_blank">GitHub</a>
+        </div>
+        <footer>
+            <p>&copy; 2024 My Personal Webpage. All rights reserved.</p>
+        </footer>
+    </div>
 </body>
 </html>
+
 
